# TransparencyRLfD

./: .gitignore  README.md  TODO.md  gazebo-tricks.md  index.html  install.md  mocap-selection-mingfei.md  mocap-selection-zhenhui.md  motion-planning.md  moveit-pr2.md  q_table_value.txt
data/: data.csv  readme.md
data/00_pilot_peter/demo/: peter-20180902124948.bag  peter-eligibility_traces-12.txt  peter-eligibility_traces-22.txt  peter-eligibility_traces-4.txt  peter-eligibility_traces-41.txt  peter-eligibility_traces-42.txt  peter-eligibility_traces-5.txt  peter-q_potential_value-1.txt  peter-q_potential_value-16.txt  peter-q_potential_value-23.txt  peter-q_potential_value-30.txt  peter-q_potential_value-31.txt  peter-q_potential_value-42.txt  peter-q_potential_value-45.txt  peter-q_potential_value-50.txt  peter-q_potential_value-7.txt  peter-q_table_value-1.txt  peter-q_table_value-10.txt  peter-q_table_value-11.txt  peter-q_table_value-12.txt  peter-q_table_value-13.txt  peter-q_table_value-14.txt  peter-q_table_value-15.txt  peter-q_table_value-16.txt  peter-q_table_value-17.txt  peter-q_table_value-18.txt  peter-q_table_value-19.txt  peter-q_table_value-2.txt  peter-q_table_value-20.txt  peter-q_table_value-21.txt  peter-q_table_value-22.txt  peter-q_table_value-23.txt  peter-q_table_value-24.txt  peter-q_table_value-25.txt  peter-q_table_value-26.txt  peter-q_table_value-27.txt  peter-q_table_value-28.txt  peter-q_table_value-29.txt  peter-q_table_value-3.txt  (+31 more)
pilot/: .gitignore
related-work/TransparentLearning/: 2010 An Active Learning Interface for Bootstrapping Robot’s Generalization Abilities in Learning from Demonstration
src/main/: CMakeLists.txt  package.xml
src/pr2_dashboard/: README.md  package.xml
src/pr2_dashboard/src/pr2_dashboard/: pr2_frame.py
src/test/: package.xml
src/ur_driver/: test_move.py
utils/: .gitignore  path_heatmap.m  process_q_table.m  q_table_figure.m  q_table_heatmap.m
(+6669 files in other folders)
